docs/versioned_docs/version-0.7.x/06-api-reference/index.md
# react-native-executorch

## Hooks

- [useClassification](functions/useClassification.md)
- [useExecutorchModule](functions/useExecutorchModule.md)
- [useImageEmbeddings](functions/useImageEmbeddings.md)
- [useImageSegmentation](functions/useImageSegmentation.md)
- [useLLM](functions/useLLM.md)
- [useObjectDetection](functions/useObjectDetection.md)
- [useOCR](functions/useOCR.md)
- [useSpeechToText](functions/useSpeechToText.md)
- [useStyleTransfer](functions/useStyleTransfer.md)
- [useTextEmbeddings](functions/useTextEmbeddings.md)
- [useTextToImage](functions/useTextToImage.md)
- [useTextToSpeech](functions/useTextToSpeech.md)
- [useTokenizer](functions/useTokenizer.md)
- [useVAD](functions/useVAD.md)
- [useVerticalOCR](functions/useVerticalOCR.md)

## Models - Classification

- [EFFICIENTNET_V2_S](variables/EFFICIENTNET_V2_S.md)

## Models - Image Embeddings

- [CLIP_VIT_BASE_PATCH32_IMAGE](variables/CLIP_VIT_BASE_PATCH32_IMAGE.md)

## Models - Image Generation

- [BK_SDM_TINY_VPRED_256](variables/BK_SDM_TINY_VPRED_256.md)
- [BK_SDM_TINY_VPRED_512](variables/BK_SDM_TINY_VPRED_512.md)

## Models - Image Segmentation

- [DEEPLAB_V3_RESNET50](variables/DEEPLAB_V3_RESNET50.md)

## Models - LLM

- [HAMMER2_1_0_5B](variables/HAMMER2_1_0_5B.md)
- [HAMMER2_1_0_5B_QUANTIZED](variables/HAMMER2_1_0_5B_QUANTIZED.md)
- [HAMMER2_1_1_5B](variables/HAMMER2_1_1_5B.md)
- [HAMMER2_1_1_5B_QUANTIZED](variables/HAMMER2_1_1_5B_QUANTIZED.md)
- [HAMMER2_1_3B](variables/HAMMER2_1_3B.md)
- [HAMMER2_1_3B_QUANTIZED](variables/HAMMER2_1_3B_QUANTIZED.md)
- [LLAMA3_2_1B](variables/LLAMA3_2_1B.md)
- [LLAMA3_2_1B_QLORA](variables/LLAMA3_2_1B_QLORA.md)
- [LLAMA3_2_1B_SPINQUANT](variables/LLAMA3_2_1B_SPINQUANT.md)
- [LLAMA3_2_3B](variables/LLAMA3_2_3B.md)
- [LLAMA3_2_3B_QLORA](variables/LLAMA3_2_3B_QLORA.md)
- [LLAMA3_2_3B_SPINQUANT](variables/LLAMA3_2_3B_SPINQUANT.md)
- [PHI_4_MINI_4B](variables/PHI_4_MINI_4B.md)
- [PHI_4_MINI_4B_QUANTIZED](variables/PHI_4_MINI_4B_QUANTIZED.md)
- [QWEN2_5_0_5B](variables/QWEN2_5_0_5B.md)
- [QWEN2_5_0_5B_QUANTIZED](variables/QWEN2_5_0_5B_QUANTIZED.md)
- [QWEN2_5_1_5B](variables/QWEN2_5_1_5B.md)
- [QWEN2_5_1_5B_QUANTIZED](variables/QWEN2_5_1_5B_QUANTIZED.md)
- [QWEN2_5_3B](variables/QWEN2_5_3B.md)
- [QWEN2_5_3B_QUANTIZED](variables/QWEN2_5_3B_QUANTIZED.md)
- [QWEN3_0_6B](variables/QWEN3_0_6B.md)
- [QWEN3_0_6B_QUANTIZED](variables/QWEN3_0_6B_QUANTIZED.md)
- [QWEN3_1_7B](variables/QWEN3_1_7B.md)
- [QWEN3_1_7B_QUANTIZED](variables/QWEN3_1_7B_QUANTIZED.md)
- [QWEN3_4B](variables/QWEN3_4B.md)
- [QWEN3_4B_QUANTIZED](variables/QWEN3_4B_QUANTIZED.md)
- [SMOLLM2_1_1_7B](variables/SMOLLM2_1_1_7B.md)
- [SMOLLM2_1_1_7B_QUANTIZED](variables/SMOLLM2_1_1_7B_QUANTIZED.md)
- [SMOLLM2_1_135M](variables/SMOLLM2_1_135M.md)
- [SMOLLM2_1_135M_QUANTIZED](variables/SMOLLM2_1_135M_QUANTIZED.md)
- [SMOLLM2_1_360M](variables/SMOLLM2_1_360M.md)
- [SMOLLM2_1_360M_QUANTIZED](variables/SMOLLM2_1_360M_QUANTIZED.md)

## Models - Object Detection

- [SSDLITE_320_MOBILENET_V3_LARGE](variables/SSDLITE_320_MOBILENET_V3_LARGE.md)

## Models - Speech To Text

- [WHISPER_BASE](variables/WHISPER_BASE.md)
- [WHISPER_BASE_EN](variables/WHISPER_BASE_EN.md)
- [WHISPER_SMALL](variables/WHISPER_SMALL.md)
- [WHISPER_SMALL_EN](variables/WHISPER_SMALL_EN.md)
- [WHISPER_TINY](variables/WHISPER_TINY.md)
- [WHISPER_TINY_EN](variables/WHISPER_TINY_EN.md)
- [WHISPER_TINY_EN_QUANTIZED](variables/WHISPER_TINY_EN_QUANTIZED.md)

## Models - Style Transfer

- [STYLE_TRANSFER_CANDY](variables/STYLE_TRANSFER_CANDY.md)
- [STYLE_TRANSFER_MOSAIC](variables/STYLE_TRANSFER_MOSAIC.md)
- [STYLE_TRANSFER_RAIN_PRINCESS](variables/STYLE_TRANSFER_RAIN_PRINCESS.md)
- [STYLE_TRANSFER_UDNIE](variables/STYLE_TRANSFER_UDNIE.md)

## Models - Text Embeddings

- [ALL_MINILM_L6_V2](variables/ALL_MINILM_L6_V2.md)
- [ALL_MPNET_BASE_V2](variables/ALL_MPNET_BASE_V2.md)
- [CLIP_VIT_BASE_PATCH32_TEXT](variables/CLIP_VIT_BASE_PATCH32_TEXT.md)
- [MULTI_QA_MINILM_L6_COS_V1](variables/MULTI_QA_MINILM_L6_COS_V1.md)
- [MULTI_QA_MPNET_BASE_DOT_V1](variables/MULTI_QA_MPNET_BASE_DOT_V1.md)

## Models - Text to Speech

- [KOKORO_MEDIUM](variables/KOKORO_MEDIUM.md)
- [KOKORO_SMALL](variables/KOKORO_SMALL.md)

## Models - Voice Activity Detection

- [FSMN_VAD](variables/FSMN_VAD.md)

## OCR Supported Alphabets

- [OCR_ABAZA](variables/OCR_ABAZA.md)
- [OCR_ADYGHE](variables/OCR_ADYGHE.md)
- [OCR_AFRIKAANS](variables/OCR_AFRIKAANS.md)
- [OCR_ALBANIAN](variables/OCR_ALBANIAN.md)
- [OCR_AVAR](variables/OCR_AVAR.md)
- [OCR_AZERBAIJANI](variables/OCR_AZERBAIJANI.md)
- [OCR_BELARUSIAN](variables/OCR_BELARUSIAN.md)
- [OCR_BOSNIAN](variables/OCR_BOSNIAN.md)
- [OCR_BULGARIAN](variables/OCR_BULGARIAN.md)
- [OCR_CHECHEN](variables/OCR_CHECHEN.md)
- [OCR_CROATIAN](variables/OCR_CROATIAN.md)
- [OCR_CZECH](variables/OCR_CZECH.md)
- [OCR_DANISH](variables/OCR_DANISH.md)
- [OCR_DARGWA](variables/OCR_DARGWA.md)
- [OCR_DUTCH](variables/OCR_DUTCH.md)
- [OCR_ENGLISH](variables/OCR_ENGLISH.md)
- [OCR_ESTONIAN](variables/OCR_ESTONIAN.md)
- [OCR_FRENCH](variables/OCR_FRENCH.md)
- [OCR_GERMAN](variables/OCR_GERMAN.md)
- [OCR_HUNGARIAN](variables/OCR_HUNGARIAN.md)
- [OCR_ICELANDIC](variables/OCR_ICELANDIC.md)
- [OCR_INDONESIAN](variables/OCR_INDONESIAN.md)
- [OCR_INGUSH](variables/OCR_INGUSH.md)
- [OCR_IRISH](variables/OCR_IRISH.md)
- [OCR_ITALIAN](variables/OCR_ITALIAN.md)
- [OCR_JAPANESE](variables/OCR_JAPANESE.md)
- [OCR_KANNADA](variables/OCR_KANNADA.md)
- [OCR_KARBADIAN](variables/OCR_KARBADIAN.md)
- [OCR_KOREAN](variables/OCR_KOREAN.md)
- [OCR_KURDISH](variables/OCR_KURDISH.md)
- [OCR_LAK](variables/OCR_LAK.md)
- [OCR_LATIN](variables/OCR_LATIN.md)
- [OCR_LATVIAN](variables/OCR_LATVIAN.md)
- [OCR_LEZGHIAN](variables/OCR_LEZGHIAN.md)
- [OCR_LITHUANIAN](variables/OCR_LITHUANIAN.md)
- [OCR_MALAY](variables/OCR_MALAY.md)
- [OCR_MALTESE](variables/OCR_MALTESE.md)
- [OCR_MAORI](variables/OCR_MAORI.md)
- [OCR_MONGOLIAN](variables/OCR_MONGOLIAN.md)
- [OCR_NORWEGIAN](variables/OCR_NORWEGIAN.md)
- [OCR_OCCITAN](variables/OCR_OCCITAN.md)
- [OCR_PALI](variables/OCR_PALI.md)
- [OCR_POLISH](variables/OCR_POLISH.md)
- [OCR_PORTUGUESE](variables/OCR_PORTUGUESE.md)
- [OCR_ROMANIAN](variables/OCR_ROMANIAN.md)
- [OCR_RUSSIAN](variables/OCR_RUSSIAN.md)
- [OCR_SERBIAN_CYRILLIC](variables/OCR_SERBIAN_CYRILLIC.md)
- [OCR_SERBIAN_LATIN](variables/OCR_SERBIAN_LATIN.md)
- [OCR_SIMPLIFIED_CHINESE](variables/OCR_SIMPLIFIED_CHINESE.md)
- [OCR_SLOVAK](variables/OCR_SLOVAK.md)
- [OCR_SLOVENIAN](variables/OCR_SLOVENIAN.md)
- [OCR_SPANISH](variables/OCR_SPANISH.md)
- [OCR_SWAHILI](variables/OCR_SWAHILI.md)
- [OCR_SWEDISH](variables/OCR_SWEDISH.md)
- [OCR_TABASSARAN](variables/OCR_TABASSARAN.md)
- [OCR_TAGALOG](variables/OCR_TAGALOG.md)
- [OCR_TAJIK](variables/OCR_TAJIK.md)
- [OCR_TELUGU](variables/OCR_TELUGU.md)
- [OCR_TURKISH](variables/OCR_TURKISH.md)
- [OCR_UKRAINIAN](variables/OCR_UKRAINIAN.md)
- [OCR_UZBEK](variables/OCR_UZBEK.md)
- [OCR_VIETNAMESE](variables/OCR_VIETNAMESE.md)
- [OCR_WELSH](variables/OCR_WELSH.md)

## Other

- [RnExecutorchErrorCode](enumerations/RnExecutorchErrorCode.md)
- [RnExecutorchError](classes/RnExecutorchError.md)

## TTS Supported Voices

- [KOKORO_VOICE_AF_HEART](variables/KOKORO_VOICE_AF_HEART.md)
- [KOKORO_VOICE_AF_RIVER](variables/KOKORO_VOICE_AF_RIVER.md)
- [KOKORO_VOICE_AF_SARAH](variables/KOKORO_VOICE_AF_SARAH.md)
- [KOKORO_VOICE_AM_ADAM](variables/KOKORO_VOICE_AM_ADAM.md)
- [KOKORO_VOICE_AM_MICHAEL](variables/KOKORO_VOICE_AM_MICHAEL.md)
- [KOKORO_VOICE_AM_SANTA](variables/KOKORO_VOICE_AM_SANTA.md)
- [KOKORO_VOICE_BF_EMMA](variables/KOKORO_VOICE_BF_EMMA.md)
- [KOKORO_VOICE_BM_DANIEL](variables/KOKORO_VOICE_BM_DANIEL.md)

## Types

- [CocoLabel](enumerations/CocoLabel.md)
- [DeeplabLabel](enumerations/DeeplabLabel.md)
- [ScalarType](enumerations/ScalarType.md)
- [Bbox](interfaces/Bbox.md)
- [ChatConfig](interfaces/ChatConfig.md)
- [ClassificationProps](interfaces/ClassificationProps.md)
- [ClassificationType](interfaces/ClassificationType.md)
- [DecodingOptions](interfaces/DecodingOptions.md)
- [Detection](interfaces/Detection.md)
- [ExecutorchModuleProps](interfaces/ExecutorchModuleProps.md)
- [ExecutorchModuleType](interfaces/ExecutorchModuleType.md)
- [GenerationConfig](interfaces/GenerationConfig.md)
- [ImageEmbeddingsProps](interfaces/ImageEmbeddingsProps.md)
- [ImageEmbeddingsType](interfaces/ImageEmbeddingsType.md)
- [ImageSegmentationProps](interfaces/ImageSegmentationProps.md)
- [ImageSegmentationType](interfaces/ImageSegmentationType.md)
- [KokoroConfig](interfaces/KokoroConfig.md)
- [KokoroVoiceExtras](interfaces/KokoroVoiceExtras.md)
- [LLMConfig](interfaces/LLMConfig.md)
- [LLMProps](interfaces/LLMProps.md)
- [LLMType](interfaces/LLMType.md)
- [Message](interfaces/Message.md)
- [ObjectDetectionProps](interfaces/ObjectDetectionProps.md)
- [ObjectDetectionType](interfaces/ObjectDetectionType.md)
- [OCRDetection](interfaces/OCRDetection.md)
- [OCRProps](interfaces/OCRProps.md)
- [OCRType](interfaces/OCRType.md)
- [Point](interfaces/Point.md)
- [Segment](interfaces/Segment.md)
- [SpeechToTextModelConfig](interfaces/SpeechToTextModelConfig.md)
- [SpeechToTextProps](interfaces/SpeechToTextProps.md)
- [SpeechToTextType](interfaces/SpeechToTextType.md)
- [StyleTransferProps](interfaces/StyleTransferProps.md)
- [StyleTransferType](interfaces/StyleTransferType.md)
- [TensorPtr](interfaces/TensorPtr.md)
- [TextEmbeddingsProps](interfaces/TextEmbeddingsProps.md)
- [TextEmbeddingsType](interfaces/TextEmbeddingsType.md)
- [TextToImageProps](interfaces/TextToImageProps.md)
- [TextToImageType](interfaces/TextToImageType.md)
- [TextToSpeechConfig](interfaces/TextToSpeechConfig.md)
- [TextToSpeechInput](interfaces/TextToSpeechInput.md)
- [TextToSpeechProps](interfaces/TextToSpeechProps.md)
- [TextToSpeechStreamingInput](interfaces/TextToSpeechStreamingInput.md)
- [TextToSpeechType](interfaces/TextToSpeechType.md)
- [TokenizerProps](interfaces/TokenizerProps.md)
- [TokenizerType](interfaces/TokenizerType.md)
- [ToolCall](interfaces/ToolCall.md)
- [ToolsConfig](interfaces/ToolsConfig.md)
- [VADProps](interfaces/VADProps.md)
- [VADType](interfaces/VADType.md)
- [VerticalOCRProps](interfaces/VerticalOCRProps.md)
- [VoiceConfig](interfaces/VoiceConfig.md)
- [LLMTool](type-aliases/LLMTool.md)
- [MessageRole](type-aliases/MessageRole.md)
- [OCRLanguage](type-aliases/OCRLanguage.md)
- [ResourceSource](type-aliases/ResourceSource.md)
- [SpeechToTextLanguage](type-aliases/SpeechToTextLanguage.md)
- [TensorBuffer](type-aliases/TensorBuffer.md)
- [TextToSpeechLanguage](type-aliases/TextToSpeechLanguage.md)
- [SPECIAL_TOKENS](variables/SPECIAL_TOKENS.md)

## Typescript API

- [ClassificationModule](classes/ClassificationModule.md)
- [ExecutorchModule](classes/ExecutorchModule.md)
- [ImageEmbeddingsModule](classes/ImageEmbeddingsModule.md)
- [ImageSegmentationModule](classes/ImageSegmentationModule.md)
- [LLMModule](classes/LLMModule.md)
- [ObjectDetectionModule](classes/ObjectDetectionModule.md)
- [OCRModule](classes/OCRModule.md)
- [SpeechToTextModule](classes/SpeechToTextModule.md)
- [StyleTransferModule](classes/StyleTransferModule.md)
- [TextEmbeddingsModule](classes/TextEmbeddingsModule.md)
- [TextToImageModule](classes/TextToImageModule.md)
- [TextToSpeechModule](classes/TextToSpeechModule.md)
- [TokenizerModule](classes/TokenizerModule.md)
- [VADModule](classes/VADModule.md)
- [VerticalOCRModule](classes/VerticalOCRModule.md)

## Utilities - General

- [ResourceFetcher](classes/ResourceFetcher.md)

## Utilities - LLM

- [DEFAULT_CHAT_CONFIG](variables/DEFAULT_CHAT_CONFIG.md)
- [DEFAULT_CONTEXT_WINDOW_LENGTH](variables/DEFAULT_CONTEXT_WINDOW_LENGTH.md)
- [DEFAULT_MESSAGE_HISTORY](variables/DEFAULT_MESSAGE_HISTORY.md)
- [DEFAULT_SYSTEM_PROMPT](variables/DEFAULT_SYSTEM_PROMPT.md)
- [parseToolCall](variables/parseToolCall.md)
- [DEFAULT_STRUCTURED_OUTPUT_PROMPT](functions/DEFAULT_STRUCTURED_OUTPUT_PROMPT.md)
- [fixAndValidateStructuredOutput](functions/fixAndValidateStructuredOutput.md)
- [getStructuredOutputPrompt](functions/getStructuredOutputPrompt.md)
