docs/versioned_docs/version-0.8.x/06-api-reference/index.md
# react-native-executorch

## Hooks

- [useClassification](functions/useClassification.md)
- [useExecutorchModule](functions/useExecutorchModule.md)
- [useImageEmbeddings](functions/useImageEmbeddings.md)
- [useInstanceSegmentation](functions/useInstanceSegmentation.md)
- [useLLM](functions/useLLM.md)
- [useObjectDetection](functions/useObjectDetection.md)
- [useOCR](functions/useOCR.md)
- [useSemanticSegmentation](functions/useSemanticSegmentation.md)
- [useSpeechToText](functions/useSpeechToText.md)
- [useStyleTransfer](functions/useStyleTransfer.md)
- [useTextEmbeddings](functions/useTextEmbeddings.md)
- [useTextToImage](functions/useTextToImage.md)
- [useTextToSpeech](functions/useTextToSpeech.md)
- [useTokenizer](functions/useTokenizer.md)
- [useVAD](functions/useVAD.md)
- [useVerticalOCR](functions/useVerticalOCR.md)

## Interfaces

- [ResourceSourceExtended](interfaces/ResourceSourceExtended.md)

## Models - Classification

- [EFFICIENTNET\_V2\_S](variables/EFFICIENTNET_V2_S.md)
- [EFFICIENTNET\_V2\_S\_QUANTIZED](variables/EFFICIENTNET_V2_S_QUANTIZED.md)

## Models - Image Embeddings

- [CLIP\_VIT\_BASE\_PATCH32\_IMAGE](variables/CLIP_VIT_BASE_PATCH32_IMAGE.md)
- [CLIP\_VIT\_BASE\_PATCH32\_IMAGE\_QUANTIZED](variables/CLIP_VIT_BASE_PATCH32_IMAGE_QUANTIZED.md)

## Models - Image Generation

- [BK\_SDM\_TINY\_VPRED\_256](variables/BK_SDM_TINY_VPRED_256.md)
- [BK\_SDM\_TINY\_VPRED\_512](variables/BK_SDM_TINY_VPRED_512.md)

## Models - Instance Segmentation

- [RF\_DETR\_NANO\_SEG](variables/RF_DETR_NANO_SEG.md)
- [YOLO26L\_SEG](variables/YOLO26L_SEG.md)
- [YOLO26M\_SEG](variables/YOLO26M_SEG.md)
- [YOLO26N\_SEG](variables/YOLO26N_SEG.md)
- [YOLO26S\_SEG](variables/YOLO26S_SEG.md)
- [YOLO26X\_SEG](variables/YOLO26X_SEG.md)

## Models - LLM

- [HAMMER2\_1\_0\_5B](variables/HAMMER2_1_0_5B.md)
- [HAMMER2\_1\_0\_5B\_QUANTIZED](variables/HAMMER2_1_0_5B_QUANTIZED.md)
- [HAMMER2\_1\_1\_5B](variables/HAMMER2_1_1_5B.md)
- [HAMMER2\_1\_1\_5B\_QUANTIZED](variables/HAMMER2_1_1_5B_QUANTIZED.md)
- [HAMMER2\_1\_3B](variables/HAMMER2_1_3B.md)
- [HAMMER2\_1\_3B\_QUANTIZED](variables/HAMMER2_1_3B_QUANTIZED.md)
- [LFM2\_5\_1\_2B\_INSTRUCT](variables/LFM2_5_1_2B_INSTRUCT.md)
- [LFM2\_5\_1\_2B\_INSTRUCT\_QUANTIZED](variables/LFM2_5_1_2B_INSTRUCT_QUANTIZED.md)
- [LLAMA3\_2\_1B](variables/LLAMA3_2_1B.md)
- [LLAMA3\_2\_1B\_QLORA](variables/LLAMA3_2_1B_QLORA.md)
- [LLAMA3\_2\_1B\_SPINQUANT](variables/LLAMA3_2_1B_SPINQUANT.md)
- [LLAMA3\_2\_3B](variables/LLAMA3_2_3B.md)
- [LLAMA3\_2\_3B\_QLORA](variables/LLAMA3_2_3B_QLORA.md)
- [LLAMA3\_2\_3B\_SPINQUANT](variables/LLAMA3_2_3B_SPINQUANT.md)
- [PHI\_4\_MINI\_4B](variables/PHI_4_MINI_4B.md)
- [PHI\_4\_MINI\_4B\_QUANTIZED](variables/PHI_4_MINI_4B_QUANTIZED.md)
- [QWEN2\_5\_0\_5B](variables/QWEN2_5_0_5B.md)
- [QWEN2\_5\_0\_5B\_QUANTIZED](variables/QWEN2_5_0_5B_QUANTIZED.md)
- [QWEN2\_5\_1\_5B](variables/QWEN2_5_1_5B.md)
- [QWEN2\_5\_1\_5B\_QUANTIZED](variables/QWEN2_5_1_5B_QUANTIZED.md)
- [QWEN2\_5\_3B](variables/QWEN2_5_3B.md)
- [QWEN2\_5\_3B\_QUANTIZED](variables/QWEN2_5_3B_QUANTIZED.md)
- [QWEN3\_0\_6B](variables/QWEN3_0_6B.md)
- [QWEN3\_0\_6B\_QUANTIZED](variables/QWEN3_0_6B_QUANTIZED.md)
- [QWEN3\_1\_7B](variables/QWEN3_1_7B.md)
- [QWEN3\_1\_7B\_QUANTIZED](variables/QWEN3_1_7B_QUANTIZED.md)
- [QWEN3\_4B](variables/QWEN3_4B.md)
- [QWEN3\_4B\_QUANTIZED](variables/QWEN3_4B_QUANTIZED.md)
- [SMOLLM2\_1\_1\_7B](variables/SMOLLM2_1_1_7B.md)
- [SMOLLM2\_1\_1\_7B\_QUANTIZED](variables/SMOLLM2_1_1_7B_QUANTIZED.md)
- [SMOLLM2\_1\_135M](variables/SMOLLM2_1_135M.md)
- [SMOLLM2\_1\_135M\_QUANTIZED](variables/SMOLLM2_1_135M_QUANTIZED.md)
- [SMOLLM2\_1\_360M](variables/SMOLLM2_1_360M.md)
- [SMOLLM2\_1\_360M\_QUANTIZED](variables/SMOLLM2_1_360M_QUANTIZED.md)

## Models - Object Detection

- [RF\_DETR\_NANO](variables/RF_DETR_NANO.md)
- [SSDLITE\_320\_MOBILENET\_V3\_LARGE](variables/SSDLITE_320_MOBILENET_V3_LARGE.md)
- [YOLO26L](variables/YOLO26L.md)
- [YOLO26M](variables/YOLO26M.md)
- [YOLO26N](variables/YOLO26N.md)
- [YOLO26S](variables/YOLO26S.md)
- [YOLO26X](variables/YOLO26X.md)

## Models - Semantic Segmentation

- [DEEPLAB\_V3\_MOBILENET\_V3\_LARGE](variables/DEEPLAB_V3_MOBILENET_V3_LARGE.md)
- [DEEPLAB\_V3\_MOBILENET\_V3\_LARGE\_QUANTIZED](variables/DEEPLAB_V3_MOBILENET_V3_LARGE_QUANTIZED.md)
- [DEEPLAB\_V3\_RESNET101](variables/DEEPLAB_V3_RESNET101.md)
- [DEEPLAB\_V3\_RESNET101\_QUANTIZED](variables/DEEPLAB_V3_RESNET101_QUANTIZED.md)
- [DEEPLAB\_V3\_RESNET50](variables/DEEPLAB_V3_RESNET50.md)
- [DEEPLAB\_V3\_RESNET50\_QUANTIZED](variables/DEEPLAB_V3_RESNET50_QUANTIZED.md)
- [FCN\_RESNET101](variables/FCN_RESNET101.md)
- [FCN\_RESNET101\_QUANTIZED](variables/FCN_RESNET101_QUANTIZED.md)
- [FCN\_RESNET50](variables/FCN_RESNET50.md)
- [FCN\_RESNET50\_QUANTIZED](variables/FCN_RESNET50_QUANTIZED.md)
- [LRASPP\_MOBILENET\_V3\_LARGE](variables/LRASPP_MOBILENET_V3_LARGE.md)
- [LRASPP\_MOBILENET\_V3\_LARGE\_QUANTIZED](variables/LRASPP_MOBILENET_V3_LARGE_QUANTIZED.md)
- [SELFIE\_SEGMENTATION](variables/SELFIE_SEGMENTATION.md)

## Models - Speech To Text

- [WHISPER\_BASE](variables/WHISPER_BASE.md)
- [WHISPER\_BASE\_EN](variables/WHISPER_BASE_EN.md)
- [WHISPER\_BASE\_EN\_QUANTIZED](variables/WHISPER_BASE_EN_QUANTIZED.md)
- [WHISPER\_SMALL](variables/WHISPER_SMALL.md)
- [WHISPER\_SMALL\_EN](variables/WHISPER_SMALL_EN.md)
- [WHISPER\_SMALL\_EN\_QUANTIZED](variables/WHISPER_SMALL_EN_QUANTIZED.md)
- [WHISPER\_TINY](variables/WHISPER_TINY.md)
- [WHISPER\_TINY\_EN](variables/WHISPER_TINY_EN.md)
- [WHISPER\_TINY\_EN\_QUANTIZED](variables/WHISPER_TINY_EN_QUANTIZED.md)

## Models - Style Transfer

- [STYLE\_TRANSFER\_CANDY](variables/STYLE_TRANSFER_CANDY.md)
- [STYLE\_TRANSFER\_CANDY\_QUANTIZED](variables/STYLE_TRANSFER_CANDY_QUANTIZED.md)
- [STYLE\_TRANSFER\_MOSAIC](variables/STYLE_TRANSFER_MOSAIC.md)
- [STYLE\_TRANSFER\_MOSAIC\_QUANTIZED](variables/STYLE_TRANSFER_MOSAIC_QUANTIZED.md)
- [STYLE\_TRANSFER\_RAIN\_PRINCESS](variables/STYLE_TRANSFER_RAIN_PRINCESS.md)
- [STYLE\_TRANSFER\_RAIN\_PRINCESS\_QUANTIZED](variables/STYLE_TRANSFER_RAIN_PRINCESS_QUANTIZED.md)
- [STYLE\_TRANSFER\_UDNIE](variables/STYLE_TRANSFER_UDNIE.md)
- [STYLE\_TRANSFER\_UDNIE\_QUANTIZED](variables/STYLE_TRANSFER_UDNIE_QUANTIZED.md)

## Models - Text Embeddings

- [ALL\_MINILM\_L6\_V2](variables/ALL_MINILM_L6_V2.md)
- [ALL\_MPNET\_BASE\_V2](variables/ALL_MPNET_BASE_V2.md)
- [CLIP\_VIT\_BASE\_PATCH32\_TEXT](variables/CLIP_VIT_BASE_PATCH32_TEXT.md)
- [MULTI\_QA\_MINILM\_L6\_COS\_V1](variables/MULTI_QA_MINILM_L6_COS_V1.md)
- [MULTI\_QA\_MPNET\_BASE\_DOT\_V1](variables/MULTI_QA_MPNET_BASE_DOT_V1.md)

## Models - Text to Speech

- [KOKORO\_MEDIUM](variables/KOKORO_MEDIUM.md)
- [KOKORO\_SMALL](variables/KOKORO_SMALL.md)

## Models - VLM

- [LFM2\_VL\_1\_6B\_QUANTIZED](variables/LFM2_VL_1_6B_QUANTIZED.md)

## Models - Voice Activity Detection

- [FSMN\_VAD](variables/FSMN_VAD.md)

## OCR Supported Alphabets

- [OCR\_ABAZA](variables/OCR_ABAZA.md)
- [OCR\_ADYGHE](variables/OCR_ADYGHE.md)
- [OCR\_AFRIKAANS](variables/OCR_AFRIKAANS.md)
- [OCR\_ALBANIAN](variables/OCR_ALBANIAN.md)
- [OCR\_AVAR](variables/OCR_AVAR.md)
- [OCR\_AZERBAIJANI](variables/OCR_AZERBAIJANI.md)
- [OCR\_BELARUSIAN](variables/OCR_BELARUSIAN.md)
- [OCR\_BOSNIAN](variables/OCR_BOSNIAN.md)
- [OCR\_BULGARIAN](variables/OCR_BULGARIAN.md)
- [OCR\_CHECHEN](variables/OCR_CHECHEN.md)
- [OCR\_CROATIAN](variables/OCR_CROATIAN.md)
- [OCR\_CZECH](variables/OCR_CZECH.md)
- [OCR\_DANISH](variables/OCR_DANISH.md)
- [OCR\_DARGWA](variables/OCR_DARGWA.md)
- [OCR\_DUTCH](variables/OCR_DUTCH.md)
- [OCR\_ENGLISH](variables/OCR_ENGLISH.md)
- [OCR\_ESTONIAN](variables/OCR_ESTONIAN.md)
- [OCR\_FRENCH](variables/OCR_FRENCH.md)
- [OCR\_GERMAN](variables/OCR_GERMAN.md)
- [OCR\_HUNGARIAN](variables/OCR_HUNGARIAN.md)
- [OCR\_ICELANDIC](variables/OCR_ICELANDIC.md)
- [OCR\_INDONESIAN](variables/OCR_INDONESIAN.md)
- [OCR\_INGUSH](variables/OCR_INGUSH.md)
- [OCR\_IRISH](variables/OCR_IRISH.md)
- [OCR\_ITALIAN](variables/OCR_ITALIAN.md)
- [OCR\_JAPANESE](variables/OCR_JAPANESE.md)
- [OCR\_KANNADA](variables/OCR_KANNADA.md)
- [OCR\_KARBADIAN](variables/OCR_KARBADIAN.md)
- [OCR\_KOREAN](variables/OCR_KOREAN.md)
- [OCR\_KURDISH](variables/OCR_KURDISH.md)
- [OCR\_LAK](variables/OCR_LAK.md)
- [OCR\_LATIN](variables/OCR_LATIN.md)
- [OCR\_LATVIAN](variables/OCR_LATVIAN.md)
- [OCR\_LEZGHIAN](variables/OCR_LEZGHIAN.md)
- [OCR\_LITHUANIAN](variables/OCR_LITHUANIAN.md)
- [OCR\_MALAY](variables/OCR_MALAY.md)
- [OCR\_MALTESE](variables/OCR_MALTESE.md)
- [OCR\_MAORI](variables/OCR_MAORI.md)
- [OCR\_MONGOLIAN](variables/OCR_MONGOLIAN.md)
- [OCR\_NORWEGIAN](variables/OCR_NORWEGIAN.md)
- [OCR\_OCCITAN](variables/OCR_OCCITAN.md)
- [OCR\_PALI](variables/OCR_PALI.md)
- [OCR\_POLISH](variables/OCR_POLISH.md)
- [OCR\_PORTUGUESE](variables/OCR_PORTUGUESE.md)
- [OCR\_ROMANIAN](variables/OCR_ROMANIAN.md)
- [OCR\_RUSSIAN](variables/OCR_RUSSIAN.md)
- [OCR\_SERBIAN\_CYRILLIC](variables/OCR_SERBIAN_CYRILLIC.md)
- [OCR\_SERBIAN\_LATIN](variables/OCR_SERBIAN_LATIN.md)
- [OCR\_SIMPLIFIED\_CHINESE](variables/OCR_SIMPLIFIED_CHINESE.md)
- [OCR\_SLOVAK](variables/OCR_SLOVAK.md)
- [OCR\_SLOVENIAN](variables/OCR_SLOVENIAN.md)
- [OCR\_SPANISH](variables/OCR_SPANISH.md)
- [OCR\_SWAHILI](variables/OCR_SWAHILI.md)
- [OCR\_SWEDISH](variables/OCR_SWEDISH.md)
- [OCR\_TABASSARAN](variables/OCR_TABASSARAN.md)
- [OCR\_TAGALOG](variables/OCR_TAGALOG.md)
- [OCR\_TAJIK](variables/OCR_TAJIK.md)
- [OCR\_TELUGU](variables/OCR_TELUGU.md)
- [OCR\_TURKISH](variables/OCR_TURKISH.md)
- [OCR\_UKRAINIAN](variables/OCR_UKRAINIAN.md)
- [OCR\_UZBEK](variables/OCR_UZBEK.md)
- [OCR\_VIETNAMESE](variables/OCR_VIETNAMESE.md)
- [OCR\_WELSH](variables/OCR_WELSH.md)

## Other

- [RnExecutorchErrorCode](enumerations/RnExecutorchErrorCode.md)
- [Logger](classes/Logger.md)
- [RnExecutorchError](classes/RnExecutorchError.md)
- [Frame](interfaces/Frame.md)
- [NativeSegmentedInstance](interfaces/NativeSegmentedInstance.md)
- [IMAGENET1K\_MEAN](variables/IMAGENET1K_MEAN.md)
- [IMAGENET1K\_STD](variables/IMAGENET1K_STD.md)
- [getModelNameForUrl](functions/getModelNameForUrl.md)

## TTS Supported Voices

- [KOKORO\_VOICE\_AF\_HEART](variables/KOKORO_VOICE_AF_HEART.md)
- [KOKORO\_VOICE\_AF\_RIVER](variables/KOKORO_VOICE_AF_RIVER.md)
- [KOKORO\_VOICE\_AF\_SARAH](variables/KOKORO_VOICE_AF_SARAH.md)
- [KOKORO\_VOICE\_AM\_ADAM](variables/KOKORO_VOICE_AM_ADAM.md)
- [KOKORO\_VOICE\_AM\_MICHAEL](variables/KOKORO_VOICE_AM_MICHAEL.md)
- [KOKORO\_VOICE\_AM\_SANTA](variables/KOKORO_VOICE_AM_SANTA.md)
- [KOKORO\_VOICE\_BF\_EMMA](variables/KOKORO_VOICE_BF_EMMA.md)
- [KOKORO\_VOICE\_BM\_DANIEL](variables/KOKORO_VOICE_BM_DANIEL.md)

## Types

- [CocoLabel](enumerations/CocoLabel.md)
- [CocoLabelYolo](enumerations/CocoLabelYolo.md)
- [DeeplabLabel](enumerations/DeeplabLabel.md)
- [DownloadStatus](enumerations/DownloadStatus.md)
- [HTTP\_CODE](enumerations/HTTP_CODE.md)
- [Imagenet1kLabel](enumerations/Imagenet1kLabel.md)
- [ScalarType](enumerations/ScalarType.md)
- [SelfieSegmentationLabel](enumerations/SelfieSegmentationLabel.md)
- [SourceType](enumerations/SourceType.md)
- [Bbox](interfaces/Bbox.md)
- [ChatConfig](interfaces/ChatConfig.md)
- [ClassificationProps](interfaces/ClassificationProps.md)
- [ClassificationType](interfaces/ClassificationType.md)
- [ContextStrategy](interfaces/ContextStrategy.md)
- [DecodingOptions](interfaces/DecodingOptions.md)
- [Detection](interfaces/Detection.md)
- [ExecutorchModuleProps](interfaces/ExecutorchModuleProps.md)
- [ExecutorchModuleType](interfaces/ExecutorchModuleType.md)
- [GenerationConfig](interfaces/GenerationConfig.md)
- [ImageEmbeddingsProps](interfaces/ImageEmbeddingsProps.md)
- [ImageEmbeddingsType](interfaces/ImageEmbeddingsType.md)
- [InstanceSegmentationOptions](interfaces/InstanceSegmentationOptions.md)
- [InstanceSegmentationProps](interfaces/InstanceSegmentationProps.md)
- [InstanceSegmentationType](interfaces/InstanceSegmentationType.md)
- [KokoroConfig](interfaces/KokoroConfig.md)
- [KokoroVoiceExtras](interfaces/KokoroVoiceExtras.md)
- [LLMConfig](interfaces/LLMConfig.md)
- [LLMProps](interfaces/LLMProps.md)
- [LLMType](interfaces/LLMType.md)
- [LLMTypeBase](interfaces/LLMTypeBase.md)
- [LLMTypeMultimodal](interfaces/LLMTypeMultimodal.md)
- [Message](interfaces/Message.md)
- [ObjectDetectionOptions](interfaces/ObjectDetectionOptions.md)
- [ObjectDetectionProps](interfaces/ObjectDetectionProps.md)
- [ObjectDetectionType](interfaces/ObjectDetectionType.md)
- [OCRDetection](interfaces/OCRDetection.md)
- [OCRProps](interfaces/OCRProps.md)
- [OCRType](interfaces/OCRType.md)
- [PixelData](interfaces/PixelData.md)
- [Point](interfaces/Point.md)
- [Segment](interfaces/Segment.md)
- [SegmentedInstance](interfaces/SegmentedInstance.md)
- [SemanticSegmentationProps](interfaces/SemanticSegmentationProps.md)
- [SemanticSegmentationType](interfaces/SemanticSegmentationType.md)
- [SpeechToTextModelConfig](interfaces/SpeechToTextModelConfig.md)
- [SpeechToTextProps](interfaces/SpeechToTextProps.md)
- [SpeechToTextType](interfaces/SpeechToTextType.md)
- [StyleTransferProps](interfaces/StyleTransferProps.md)
- [StyleTransferType](interfaces/StyleTransferType.md)
- [TensorPtr](interfaces/TensorPtr.md)
- [TextEmbeddingsProps](interfaces/TextEmbeddingsProps.md)
- [TextEmbeddingsType](interfaces/TextEmbeddingsType.md)
- [TextToImageProps](interfaces/TextToImageProps.md)
- [TextToImageType](interfaces/TextToImageType.md)
- [TextToSpeechConfig](interfaces/TextToSpeechConfig.md)
- [TextToSpeechInput](interfaces/TextToSpeechInput.md)
- [TextToSpeechPhonemeInput](interfaces/TextToSpeechPhonemeInput.md)
- [TextToSpeechProps](interfaces/TextToSpeechProps.md)
- [TextToSpeechStreamingCallbacks](interfaces/TextToSpeechStreamingCallbacks.md)
- [TextToSpeechStreamingInput](interfaces/TextToSpeechStreamingInput.md)
- [TextToSpeechStreamingPhonemeInput](interfaces/TextToSpeechStreamingPhonemeInput.md)
- [TextToSpeechType](interfaces/TextToSpeechType.md)
- [TokenizerProps](interfaces/TokenizerProps.md)
- [TokenizerType](interfaces/TokenizerType.md)
- [ToolCall](interfaces/ToolCall.md)
- [ToolsConfig](interfaces/ToolsConfig.md)
- [TranscriptionResult](interfaces/TranscriptionResult.md)
- [TranscriptionSegment](interfaces/TranscriptionSegment.md)
- [VADProps](interfaces/VADProps.md)
- [VADType](interfaces/VADType.md)
- [VerticalOCRProps](interfaces/VerticalOCRProps.md)
- [VoiceConfig](interfaces/VoiceConfig.md)
- [Word](interfaces/Word.md)
- [ClassificationConfig](type-aliases/ClassificationConfig.md)
- [ClassificationLabels](type-aliases/ClassificationLabels.md)
- [ClassificationModelName](type-aliases/ClassificationModelName.md)
- [ClassificationModelSources](type-aliases/ClassificationModelSources.md)
- [ImageEmbeddingsModelName](type-aliases/ImageEmbeddingsModelName.md)
- [InstanceModelNameOf](type-aliases/InstanceModelNameOf.md)
- [InstanceSegmentationConfig](type-aliases/InstanceSegmentationConfig.md)
- [InstanceSegmentationLabels](type-aliases/InstanceSegmentationLabels.md)
- [InstanceSegmentationModelName](type-aliases/InstanceSegmentationModelName.md)
- [InstanceSegmentationModelSources](type-aliases/InstanceSegmentationModelSources.md)
- [LabelEnum](type-aliases/LabelEnum.md)
- [LLMCapability](type-aliases/LLMCapability.md)
- [LLMModelName](type-aliases/LLMModelName.md)
- [LLMTool](type-aliases/LLMTool.md)
- [MediaArg](type-aliases/MediaArg.md)
- [MessageRole](type-aliases/MessageRole.md)
- [ModelNameOf](type-aliases/ModelNameOf.md)
- [ObjectDetectionConfig](type-aliases/ObjectDetectionConfig.md)
- [ObjectDetectionLabels](type-aliases/ObjectDetectionLabels.md)
- [ObjectDetectionModelName](type-aliases/ObjectDetectionModelName.md)
- [ObjectDetectionModelSources](type-aliases/ObjectDetectionModelSources.md)
- [OCRLanguage](type-aliases/OCRLanguage.md)
- [OCRModelName](type-aliases/OCRModelName.md)
- [ResourceSource](type-aliases/ResourceSource.md)
- [SegmentationLabels](type-aliases/SegmentationLabels.md)
- [SemanticSegmentationConfig](type-aliases/SemanticSegmentationConfig.md)
- [SemanticSegmentationModelName](type-aliases/SemanticSegmentationModelName.md)
- [SemanticSegmentationModelSources](type-aliases/SemanticSegmentationModelSources.md)
- [SpeechToTextLanguage](type-aliases/SpeechToTextLanguage.md)
- [SpeechToTextModelName](type-aliases/SpeechToTextModelName.md)
- [StyleTransferModelName](type-aliases/StyleTransferModelName.md)
- [TensorBuffer](type-aliases/TensorBuffer.md)
- [TextEmbeddingsModelName](type-aliases/TextEmbeddingsModelName.md)
- [TextToImageModelName](type-aliases/TextToImageModelName.md)
- [TextToSpeechLanguage](type-aliases/TextToSpeechLanguage.md)
- [TextToSpeechModelName](type-aliases/TextToSpeechModelName.md)
- [Triple](type-aliases/Triple.md)
- [VADModelName](type-aliases/VADModelName.md)
- [SPECIAL\_TOKENS](variables/SPECIAL_TOKENS.md)

## Typescript API

- [ClassificationModule](classes/ClassificationModule.md)
- [ExecutorchModule](classes/ExecutorchModule.md)
- [ImageEmbeddingsModule](classes/ImageEmbeddingsModule.md)
- [InstanceSegmentationModule](classes/InstanceSegmentationModule.md)
- [LLMModule](classes/LLMModule.md)
- [ObjectDetectionModule](classes/ObjectDetectionModule.md)
- [OCRModule](classes/OCRModule.md)
- [SemanticSegmentationModule](classes/SemanticSegmentationModule.md)
- [SpeechToTextModule](classes/SpeechToTextModule.md)
- [StyleTransferModule](classes/StyleTransferModule.md)
- [TextEmbeddingsModule](classes/TextEmbeddingsModule.md)
- [TextToImageModule](classes/TextToImageModule.md)
- [TextToSpeechModule](classes/TextToSpeechModule.md)
- [TokenizerModule](classes/TokenizerModule.md)
- [VADModule](classes/VADModule.md)
- [VerticalOCRModule](classes/VerticalOCRModule.md)

## Utilities - General

- [ResourceFetcherUtils](react-native-executorch/namespaces/ResourceFetcherUtils/index.md)
- [ResourceFetcher](classes/ResourceFetcher.md)
- [ExecutorchConfig](interfaces/ExecutorchConfig.md)
- [ResourceFetcherAdapter](interfaces/ResourceFetcherAdapter.md)
- [cleanupExecutorch](functions/cleanupExecutorch.md)
- [initExecutorch](functions/initExecutorch.md)

## Utilities - LLM

- [DEFAULT\_CHAT\_CONFIG](variables/DEFAULT_CHAT_CONFIG.md)
- [DEFAULT\_CONTEXT\_BUFFER\_TOKENS](variables/DEFAULT_CONTEXT_BUFFER_TOKENS.md)
- [DEFAULT\_MESSAGE\_HISTORY](variables/DEFAULT_MESSAGE_HISTORY.md)
- [DEFAULT\_SYSTEM\_PROMPT](variables/DEFAULT_SYSTEM_PROMPT.md)
- [parseToolCall](variables/parseToolCall.md)
- [DEFAULT\_STRUCTURED\_OUTPUT\_PROMPT](functions/DEFAULT_STRUCTURED_OUTPUT_PROMPT.md)
- [fixAndValidateStructuredOutput](functions/fixAndValidateStructuredOutput.md)
- [getStructuredOutputPrompt](functions/getStructuredOutputPrompt.md)

## Utils

- [MessageCountContextStrategy](classes/MessageCountContextStrategy.md)
- [NoopContextStrategy](classes/NoopContextStrategy.md)
- [SlidingWindowContextStrategy](classes/SlidingWindowContextStrategy.md)
- [MODEL\_REGISTRY](variables/MODEL_REGISTRY.md)
